avoid lag of wrapping on scroll

--- a/css/main.custom.css
+++ b/css/main.custom.css
@@ -195,6 +195,9 @@ div[role="rowgroup"][class="ui-grid-viewport"][ng-style="colContainer.getViewpor
     display: none!important;
 }
 
+.billing-block > div {
+    transition: height 0.6s ease-in-out;
+}
 .billing-block .fix-on-scroll{
 	position: fixed;
 	top: 143px;
@@ -206,8 +209,7 @@ div[role="rowgroup"][class="ui-grid-viewport"][ng-style="colContainer.getViewpor
 	display: flex;
 	justify-content: center;
 	align-items: center;
-    height: 465px;
-    transition: height 0.5s ease;
+    transition: height 0.6s ease-in-out;
 }
 
 .billing-block .fix-on-scroll.active{
